--- a/app.json
+++ b/app.json
@@ -1,13 +1,36 @@
 {
   "expo": {
-    "scheme": "acme",
+    "name": "Mental-Break",
+    "slug": "Mental-Break",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/images/icon.png",
+    "scheme": "mental-break",
+    "userInterfaceStyle": "automatic",
+    "splash": {
+      "image": "./assets/images/splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
+    },
+    "ios": {
+      "supportsTablet": true
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/images/adaptive-icon.png",
+        "backgroundColor": "#ffffff"
+      }
+    },
     "web": {
-      "bundler": "metro"
+      "bundler": "metro",
+      "output": "static",
+      "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
       "expo-router"
     ],
-    "name": "Mental-Break",
-    "slug": "Mental-Break"
+    "experiments": {
+      "typedRoutes": true
+    }
   }
 }
